--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,3 +386,88 @@ footer p{
 
 /* End page single-product.html */
 
+
+/*  page Cart.html */
+
+.cart table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.cart .product-info{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cart th{
+    text-align: left;
+    padding: 5px 10px;
+    color: white;
+    background-color: darkmagenta;
+}
+
+.cart td{
+    padding: 10px 20px;
+}
+
+.cart td img{
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+}
+
+.cart td input{
+    width: 40px;
+    height: 30px;
+    padding: 5px;
+}
+
+.cart td a{
+    color: darkviolet;
+}
+
+.cart .remove-btn{
+    color: darkviolet;
+    text-decoration: none;
+    font-size: 15px;
+}  
+
+
+.cart .edit-btn{
+    color: darkviolet;
+    text-decoration: none;
+    font-size: 16px;
+} 
+
+.cart .product-info p{
+    margin: 3px;
+}
+
+.cart-total{
+    display: flex;
+    justify-content: flex-end;
+}
+.cart-total table{
+    width: 100%;
+    max-width: 500px;
+    border-top: 3px solid darkviolet;
+}
+
+td:last-child{
+    text-align: right;
+}
+
+th:last-child{
+    text-align: right;
+}
+
+.checkout-container{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.checkout-btn{
+    background-color: darkviolet;
+    color: #000;
+}
+/* End page Cart.html */
